apps/doh-server/doh.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doh-server
  namespace: dns
spec:
  selector:
    matchLabels:
      app: doh-server
  replicas: 1
  template:
    metadata:
      labels:
        app: doh-server
    spec:
      containers:
        - name: doh-erver
          image: hmoghani/dns-over-https:latest
          ports:
            - containerPort: 8053
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: doh-server
  namespace: dns
spec:
  selector:
    app: doh-server
  ports:
    - name: https
      port: 8053
      targetPort: 8053
  type: ClusterIP
---
