apps/doh-server/doh-ingress.yaml
## Nginx Ingress
## Follow https://devopscube.com/setup-ingress-kubernetes-nginx-controller/

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: doh-server
  namespace: dns
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  # Use the host you used in your kubernetes Ingress Configurations
  - host: doh.unifiedconsulting.net
    http:
      paths:
      - backend:
          service:
            name: doh-server
            port:
              number: 8053
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - doh.unifiedconsulting.net
    secretName: doh-secret
